# maac-research-platform

./: .env.example  .gitignore  BACKEND_API_TODO.md  COMPLEXITY_VALIDATION_IMPLEMENTATION.md  DASHBOARD_BACKEND_ALIGNMENT.md  DASHBOARD_COMPLETION.md  DASHBOARD_PROGRESS.md  INTEGRATION_TODO.md  LICENSE  README.md  docker-compose.yml  extracted-logic-summary.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  tsconfig.base.json  tsconfig.json  turbo.json
.devcontainer/: devcontainer.json
.turbo/cache/: 010d4cc2add9c64a-meta.json  077cd96d9c077a3e-meta.json  091d46659110820c-meta.json  091d46659110820c.tar.zst  0d84f84bc5235dce-meta.json  0d84f84bc5235dce.tar.zst  0f37591541870bca-meta.json  0f37591541870bca.tar.zst  132ecda83d542604-meta.json  132ecda83d542604.tar.zst  1b4ed9cfa5d4badd-meta.json  1ba80066aa058448-meta.json  1d9a6b4468c66057-meta.json  1d9a6b4468c66057.tar.zst  210d86cd997715f4-meta.json  213cebf00f8c0641-meta.json  213cebf00f8c0641.tar.zst  233a084dd97c62e9-meta.json  2e4bee00f9c0be3f-meta.json  2e4bee00f9c0be3f.tar.zst  2febe02973c2ef0b-meta.json  2febe02973c2ef0b.tar.zst  3490e562023996e2-meta.json  35954b810aae024c-meta.json  35954b810aae024c.tar.zst  36945448d79b776c-meta.json  36945448d79b776c.tar.zst  3baab58297ad5cbd-meta.json  3baab58297ad5cbd.tar.zst  4268d4ca0f22c677-meta.json  4268d4ca0f22c677.tar.zst  4d2ca3a1230c2bf3-meta.json  4d2ca3a1230c2bf3.tar.zst  (+71 more)
apps/api/: Dockerfile  (+6 more)
docs/: BILLING_SETUP.md  CALIBRATION_GUIDE.md  CHARGE_MATRIX.md  COMPLEXITY_VALIDATION_INTEGRATION.md  COMPLEXITY_VALIDATION_QUICKSTART.md  DYNAMIC_MODEL_FETCHING.md  FLY_IO_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY_DYNAMIC_MODELS.md  PRISMA_BILLING_SCHEMA.md
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
scripts/: deploy-fly.sh  test-llm-generator.ts  validate-setup.ts
services/python-stat-engine/: Dockerfile  README.md  pyproject.toml
services/python-stat-engine/src/maac_stat_engine/: __init__.py  comprehensive.py  main.py  methods.py  models.py
(+81 files in other folders)
