[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maac-stat-engine"
version = "4.0.0"
description = "MAAC Statistical Engine - Python statistical analysis service for the MAAC research platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MAAC Research Team" }
]
keywords = ["statistics", "research", "MAAC", "cognitive-assessment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    
    # Core scientific computing
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    
    # Statistical analysis
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "pingouin>=0.5.3",
    
    # Factor analysis
    "factor-analyzer>=0.5.0",
    
    # Bayesian statistics
    "pymc>=5.10.0",
    "arviz>=0.17.0",
    
    # Additional utilities
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
maac-stat-engine = "maac_stat_engine.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/maac_stat_engine"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
